--- a/k8s/auth-svc.yaml
+++ b/k8s/auth-svc.yaml
@@ -34,7 +34,7 @@ metadata:
   labels:
     app: auth-svc
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 5052
       targetPort: 5052
