deployment restart added cicd updated

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,4 +68,4 @@ jobs:
         # Ensure deployment restarts to pick up new image
       - name: Restart API Gateway Deployment
         run: |
-          kubectl rollout restart deployment api-gateway 
+          kubectl rollout restart deployment auth-svc
