deployment restart added cicd updated

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,6 +66,6 @@ jobs:
           kubectl apply -f k8s/auth-svc.yaml
 
         # Ensure deployment restarts to pick up new image
-      - name: Restart API Gateway Deployment
+      - name: Restart Auth Service Deployment
         run: |
           kubectl rollout restart deployment auth-svc
